# beam

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  apptainer.def  bibliography.bib  default.nix  elff.nix  flake.nix
.github/workflows/: ci.yml  doxygen.yml  unit-tests.yml
basilisk/: .gitignore  CMakeLists.txt
basilisk/examples/: CMakeLists.txt  CMakeLists_old.txt  df.c  ex0.c  ex1.c  huang.c  karman.c  mpi_huang.c  mpi_uhllman_cylinder.c  mpi_uhlmann_cylinder.gp  uhllman_cylinder.c  uhlmann_cylinder.gp  vtkpolytest.c
basilisk/examples/mpi/: CMakeLists.txt  huang.c  karman.c  linetest_mpi.c  mpi_huang.c  mpi_io.c  mpi_karman.c  mpi_kernels.c  mpi_uhllman_cylinder.c  mpi_vtkhdfpolydata.c  pbs_mpi.c
basilisk/examples/serial/: CMakeLists.txt  ex2.c  huang.c  huang_serial.c  karman.c  kernels.c  taylor-green.c  uhllman_cylinder.c  vtkhdfpolydata.c
basilisk/examples_old/mpi/: CMakeLists.txt  huang_mpi.c  linetest_mpi.c  mpi_mesh_manager_test.c
basilisk/examples_old/serial/: eulvel_test_serial.c  ex1.c  ex2.c  linetest_serial.c  pbs_serial.c
basilisk/interface/: CMakeLists.txt  basilisk_interface.cpp  dummy.cpp  dummy.h  ib_mesh.h  ibm.h  immersedboundary.cpp  immersedboundary.h  vertex.cpp  vertex.h
basilisk/interface/ibm/: beam.cpp  immersedboundary.cpp  immersedboundary.h  spring.cpp
basilisk/tests/: CMakeLists.txt  basilisk_tests.c  basilisk_tests.h  basilisk_unit_test.c  elff_basilisk.c  fields.c  kernels.c  mpi_moving_boundary.c  mpi_vtkhdfpolydata.c  taylor-green-centered.c  taylor-green.c  test.h
c/: CMakeLists.txt
c/models/beam/: IBEulerBeam.cpp  IBEulerBeam.h
c/models/ibm/: IBForceCoupled.cpp  IBForceCoupled.h  IBMesh.cpp  IBMesh.h  IBRuntime.cpp  IBRuntime.h  IBVelocityCoupled.cpp  IBVelocityCoupled.h  beam.cpp  beam.h  immersedboundary.cpp  immersedboundary.h
c/models/spring/: spring.h
config/: CMakeLists.txt  config.hpp  defaults.cmake
config/cmake/: config.hpp.in
config/cmake/modules/: BeamCmakeUtilities.cmake  ElffCmakeUtilities.cmake  elff_basilisk_add_executable.cmake  elff_basilisk_mpi_add_executable.cmake  elff_convert_filenames_to_full_paths.cmake
fem/: CMakeLists.txt  bilinearform.cpp  bilinearform.hpp  coefficient.cpp  coefficient.hpp  fe_base.hpp  fe_coll.cpp  fe_coll.hpp  fespace.cpp  fespace.hpp  geom.cpp  geom.hpp
fluid/: solver.hpp
general/: CMakeLists.txt  array.cpp  array.hpp  dummy.cpp  dummy.hpp  error.cpp  error.hpp  globals.cpp  globals.hpp  text.hpp
include/beam/: Beam.hpp  MyClass.hpp  beam_c.h
include/beam/Euler/: EulerBeam.hpp  InextenstibleEulerBeam.hpp  InextenstibleEulerBeamFaster.hpp  InextenstibleEulerBeamNew.hpp  StaticEulerBeam.hpp
include/beam/FiniteElement/: DoFHandler.hpp  FiniteElement.hpp  Geometry.hpp  Mesh.hpp
include/beam/LinAlg/: Matrix.hpp  Utility.hpp  Vector.hpp
io/: CMakeLists.txt  HDF.cpp  VTKHDF.cpp  VTKHDF.hpp  VTKHDFPolyData.cpp  VTKHDFPolyData.hpp  VTKPolyData.cpp  VTKPolyData.hpp
io/C/: vtkHDF.cpp  vtkHDF.hpp  vtkHDFPolyData.cpp  vtkHDFPolyData.hpp  vtkPolyData.cpp  vtkPolyData.hpp
io/CXX/: vtkHDFPolyData.cpp  vtkHDFPolyData.hpp  vtkPolyData.cpp  vtkPolyData.hpp
linalg/: CMakeLists.txt  vector.cpp  vector.hpp
manual/: build.md  index.md  theory.md
mesh/: CMakeLists.txt  element.cpp  element.hpp  mesh.cpp  mesh.hpp  mesh_readers.cpp  point.cpp  point.hpp  segment.cpp  segment.hpp  triangle.cpp  triangle.hpp  vertex.hpp
models/: CMakeLists.txt  immersedboundary.cpp  immersedboundary.hpp
models/beam/: EulerBeam.cpp  EulerBeam.hpp  EulerBeamDynamicInextensibleADDM.cpp  EulerBeamDynamicInextensibleADDM.hpp  EulerBeamDynamicInextensibleAugKKT.cpp  EulerBeamDynamicInextensibleAugKKT.hpp  EulerBeamDynamicInextensibleMoM.cpp  EulerBeamDynamicInextensibleMoM.hpp  EulerBeamDynamicInextensibleMoMSparse.cpp  EulerBeamDynamicInextensibleMoMSparse.hpp  EulerBeamMesh.cpp  EulerBeamMesh.hpp  EulerBeamStatic.cpp  EulerBeamStatic.hpp  EulerBeamStaticInextensible.cpp  EulerBeamStaticInextensible.hpp  EulerBeamStaticInextensibleADDM.cpp  EulerBeamStaticInextensibleADDM.hpp  EulerBeamStaticInextensibleADDMSparse.cpp  EulerBeamStaticInextensibleADDMSparse.hpp  EulerBeamStaticInextensibleAugKKT.cpp  EulerBeamStaticInextensibleAugKKT.hpp  EulerBeamStaticInextensibleMoM.cpp  EulerBeamStaticInextensibleMoM.hpp  EulerBeamStaticInextensibleMoMSparse.cpp  EulerBeamStaticInextensibleMoMSparse.hpp  IBEulerBeam.cpp  IBEulerBeam.hpp  Shapes.hpp
models/capsule/: Capsule.hpp
models/ibm/: IBForceCoupled.cpp  IBForceCoupled.hpp  IBMesh.cpp  IBMesh.hpp  IBModel.hpp  IBRuntime.hpp  IBVelocityCoupled.cpp  IBVelocityCoupled.hpp  immersedboundary.hpp
models/spring/: IBSpringCircle.hpp  Spring.hpp
mpi/: CMakeLists.txt  CommHandle.cpp  CommHandle.hpp  Policy.hpp  Runtime.cpp  Runtime.hpp
python/: custom.py  inextensible_alternating_direction.py  inextensible_jacobian.ipynb  polytest.py  test.py
src/: MyClass.cpp  beam_c.cpp  main.cpp  main_old.cpp
src/Euler/: InextensibleEulerBeam.cpp
src/LinAlg/: Matrix.cpp  Vector.cpp
tests/: CMakeLists.txt
tests/benchmark/: EulerBeamDynamicInextensibleADDM.cpp  EulerBeamDynamicInextensibleAugKKT.cpp  EulerBeamDynamicInextensibleMoM.cpp  EulerBeamDynamicInextensibleMoMSparse.cpp  EulerBeamStatic.cpp  EulerBeamStaticInextensible.cpp  EulerBeamStaticInextensibleADDM.cpp  EulerBeamStaticInextensibleADDMSparse.cpp  EulerBeamStaticInextensibleAugKKT.cpp  EulerBeamStaticInextensibleMoM.cpp  EulerBeamStaticInextensibleMoMSparse.cpp  EulerBeamStaticInextensibleReferences.cpp  EulerBeamStaticInextensibleReferences.hpp  environment.cpp
tests/old/: InextensibleEulerBeam.cpp
tests/unit/: Matrix.cpp  Vector.cpp
tests/unit/basilisk/interface/: spring.cpp
tests/unit/general/: array.cpp
tests/unit/io/: VTKHDFPolyData.cpp
tests/unit/io/C/: vtkHDFPolyData.cpp  vtkPolyData.cpp
tests/unit/io/CXX/: vtkHDFPolyData.cpp
tests/unit/models/spring/: Spring.cpp
unused/: Assembler.hpp  DoFHandler.hpp  FieldVariable.hpp  FunctionSpace.hpp  QuadratureRule.hpp  ShapeFunctionSet.hpp
